<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tronku.quizgame.MainActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarThumbVertical="@color/blue"
    android:scrollbarSize="2dp"
    android:scrollbarStyle="outsideOverlay">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearlayout"
        android:background="@drawable/google_logo"
        android:sca>
        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/quizlogo"
            android:background="@android:color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:text="@string/ques"
            android:textColor="@android:color/black"
            android:paddingLeft="30dp"
            android:id="@+id/ques_no"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/q1"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:id="@+id/ques"
            android:background="@android:color/black"
            android:scaleType="centerCrop"
            android:textSize="30sp"/>
        <Button
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:textStyle="bold"
            android:background="@drawable/options"
            android:text="@string/q1_op1"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/op1"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:onClick="op1"/>
        <Button
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@drawable/options"
            android:text="@string/q1_op2"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/op2"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:onClick="op2"/>
        <Button
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@drawable/options"
            android:text="@string/q1_op3"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif"
            android:id="@+id/op3"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:onClick="op3"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:text="@string/score"
                android:textSize="25sp"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/values"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"
                android:textColor="@color/ques"
                android:textSize="25sp"
                android:id="@+id/value"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</ScrollView>
</android.support.constraint.ConstraintLayout>
